check user email preference before sending email