@@ -167,6 +167,9 @@
         <version>3.10.1</version>
         <configuration>
           <release>17</release>
+            <source>17</source>
+            <target>17</target>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
 
